# typed-io

./: Cargo.toml  README.md
src/: lib.rs  read_bytes.rs  typed_read.rs  typed_write.rs  write_bytes.rs
