[package]
name = "typed-io"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Extends and types `std::io` to make it easier to use."
readme = "README.md"
repository = "https://github.com/kurotakazuki/typed-io"
categories = ["encoding", "parsing"]
keywords = ["typed", "io", "read", "write", "endianness"]
authors = ["Kazuki Kurota"]

[dependencies]
